grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $._newline,
          $.semicolon_comment,
          $.hash_comment,
          $.percent_line,
          $.klipper_section,
          $.klipper_option,
          $.klipper_glyph_line,
          $.rrf_declaration,
          $.rrf_assignment,
          $.rrf_control,
          $.rrf_else,
          $.rrf_loop_control,
          $.rrf_output,
          $.o_statement,
          $.program_line,
          $.star_line,
        ),
      ),

    // Decorative separator lines ("* * * * *") in shop-floor Fanuc output.
    _newline: (_) => /\r?\n/,

    semicolon_comment: (_) => /;[^\r\n]*/,
    // "##" followed by a digit stays parameter indirection (Fanuc ##2);
    // any other "##"-run is a comment.
    //
    // "#[" is the contested one: it opens LinuxCNC indirection ("#[#1] = 0")
    // and it opens a commented-out Klipper section ("#[tmc2208 stepper_x]").
    // The first character that could start an expression decides — a digit,
    // "#", a sign, or a decimal point means indirection, anything else means
    // prose. Nesting and spaces are skipped first, so "#[[#1+1]*2]" is still
    // indirection and "#[[tmc2130 stepper_x]" is still a comment. Both
    // branches lex at the same precedence, so the comment wins by being the
    // longer match wherever it applies at all.
    hash_comment: (_) =>
      choice(
        "#",
        /#{3,}[^\r\n]*/,
        /##(?:[^0-9\r\n][^\r\n]*)?/,
        /#[^0-9<#\[\r\n][^\r\n]*/,
        /#\[[ \t\[]*[^0-9#\[+\-. \t\r\n][^\r\n]*/,
      ),
    // One level of nesting: real Fanuc output contains "(A (B))" comments.
    // The unterminated variant (prec -4) tolerates prose like "(The height is
    // used only" in doc text; a real ")" on the line always wins.
    parenthesized_comment: (_) =>
      choice(
        token(prec(-1, /\((?:[^()\r\n]|\([^()\r\n]*\))*\)/)),
        token(prec(-4, /\([^()\r\n]*/)),
      ),

    percent_line: ($) =>
      prec.right(seq("%", optional($.semicolon_comment), $._newline)),

    // The optional trailing text tolerates usage-docstring continuation lines
    // inside multiline option values ("[MINIMUM=<min>] [SPEED=<speed>]") —
    // a flat line grammar cannot know they are still part of the value.
    klipper_section: ($) =>
      prec.right(
        5,
        seq(
          field("kind", $.section_start),
          optional(field("name", $.section_name)),
          optional("]"),
          optional($.klipper_option_text),
          optional($.hash_comment),
          $._newline,
        ),
      ),
    section_start: (_) => /\[[A-Za-z_][A-Za-z0-9_-]*/,
    section_name: (_) =>
      /[A-Za-z0-9_.~*<>=|,+\/-]+(?:[ \t]+[A-Za-z0-9_.~*<>=|,+\/-]+)*/,

    klipper_option: ($) =>
      prec.right(
        3,
        seq(
          field("name", $.option_name),
          choice(
            repeat1(
              choice(
                $._template_item,
                $.bracket_expression,
                $.named_argument,
                $.bare_argument,
                $.string,
                $.number,
                $.comma,
                $.colon,
              ),
            ),
            optional($.klipper_option_text),
          ),
          // Klipper's reader takes both "#" and ";" as inline comment
          // prefixes, and real configs use ";" after numeric values
          // ("pid_Kp: 2.0   ;40").
          optional(choice($.klipper_inline_comment, $.semicolon_comment)),
          $._newline,
        ),
      ),
    // Both branches carve Siemens out of Klipper's "name value" shapes.
    // The ":" branch requires a lowercase letter somewhere in the name, so an
    // all-caps Siemens jump label at line start ("MARKE1: M30") stays a
    // program line instead of swallowing its command as option text; every
    // Klipper option key in the corpora has one, including the odd "Speed:".
    // The "=" branch requires a second letter or underscore, so Siemens
    // address assignments ("S1=5000", "R10=R11+2") stay program lines too.
    option_name: (_) =>
      token(
        prec(
          10,
          /(?:[a-z_][A-Za-z0-9_]*:|[A-Za-z_][A-Za-z0-9_]*[a-z][A-Za-z0-9_]*:|[A-Za-z_][0-9]*[A-Za-z_][A-Za-z0-9_]*[ \t]*=)/,
        ),
      ),
    klipper_option_text: (_) => token(prec(-1, /[^#\r\n]+/)),
    klipper_glyph_line: ($) => seq($.glyph_pixels, $._newline),
    // Minimum 5: hd44780 glyph rows are 5 wide, ST7920 rows 16 — while a
    // shorter dot run at line start ("... loading") is prose, not pixels.
    glyph_pixels: (_) => /[.*]{5}[.*]*/,

    rrf_declaration: ($) =>
      rrfLine(
        $,
        $.rrf_declaration_keyword,
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),

    rrf_assignment: ($) =>
      rrfLine(
        $,
        $.rrf_set_keyword,
        field("target", $._assignable),
        "=",
        field("value", $._expression),
      ),

    rrf_control: ($) =>
      rrfLine($, $.rrf_control_keyword, field("condition", $._expression)),

    rrf_else: ($) => rrfLine($, $.rrf_else_keyword),

    rrf_loop_control: ($) => rrfLine($, $.rrf_loop_control_keyword),

    rrf_output: ($) =>
      rrfLine(
        $,
        $.rrf_output_keyword,
        repeat(choice($._expression, $.bare_argument, $.comma)),
      ),

    rrf_declaration_keyword: (_) => choice("var", "global"),
    rrf_set_keyword: (_) => "set",
    rrf_control_keyword: (_) => choice("if", "elif", "while"),
    rrf_else_keyword: (_) => "else",
    rrf_loop_control_keyword: (_) => choice("break", "continue"),
    rrf_output_keyword: (_) => choice("echo", "abort"),

    o_statement: ($) =>
      prec.right(
        seq(
          field("label", $.o_label),
          optional(field("keyword", $.o_keyword)),
          repeat(
            choice(
              $.bracket_expression,
              $.parameter_reference,
              $.number,
              $.bare_argument,
              $.parenthesized_comment,
            ),
          ),
          optional(choice($.semicolon_comment, $.hash_comment)),
          $._newline,
        ),
      ),
    o_label: (_) => token(prec(9, /[oO](?:\d+(?:\.\d+)?|<[^>\r\n]+>)/)),
    o_keyword: (_) =>
      token(
        caseInsensitiveWords([
          "endrepeat",
          "endwhile",
          "continue",
          "elseif",
          "endsub",
          "return",
          "repeat",
          "endif",
          "break",
          "while",
          "call",
          "else",
          "sub",
          "if",
          "do",
        ]),
      ),

    program_line: ($) =>
      prec.right(
        seq(
          optional($.block_delete),
          choice(
            // A bare block number (with or without a trailing comment) is a
            // complete line — Siemens and Fanuc output is full of them.
            seq($.line_number, optional($._line_body)),
            $._line_body,
          ),
          optional($.checksum),
          optional(choice($.semicolon_comment, $.hash_comment)),
          $._newline,
        ),
      ),
    _line_body: ($) =>
      prec.right(
        choice(
          seq(field("command", $._command), repeat($._program_item)),
          repeat1($._program_item),
        ),
      ),

    block_delete: (_) => "/",
    line_number: (_) => token(prec(8, /[Nn]\d+(?:\.\d+)?/)),
    checksum: (_) => /\*\d+/,

    g_code: (_) => codeWord("Gg"),
    m_code: (_) => codeWord("Mm"),
    tool_code: (_) => codeWord("Tt"),
    // A digit run may not be followed directly by a letter: that boundary is
    // where compact G-code splits (G1X10 is G1 + X10, SET_TMC2209_FIELD is
    // one command). Equal-length matches then let the prec-8 code words win.
    extended_command: (_) =>
      token(prec(-1, /[A-Za-z_](?:[A-Za-z_]|\d+_)*(?:[A-Za-z_]|\d+)/)),

    address_assignment: ($) =>
      seq(
        field("address", choice($.axis_word, $.spindle_word, $.parameter_word)),
        token.immediate("="),
        field("value", choice($._expression, $.bare_argument)),
      ),

    axis_word: (_) => letterWord("XYZABCUVWExyzabcuvwe", 7),
    feed_word: (_) => letterWord("Ff", 7),
    spindle_word: (_) => letterWord("Ss", 7),
    parameter_word: (_) => letterWord("A-Za-z", 6),
    expression_word: ($) =>
      choice(
        seq(
          field("prefix", $.address_letter),
          token.immediate("{"),
          optional(commaSep1($._expression)),
          "}",
        ),
        seq(
          field("prefix", $.address_letter),
          token.immediate("["),
          optional(commaSep1($._expression)),
          "]",
        ),
        seq(
          field("prefix", $.parameter_word_start),
          token.immediate("["),
          $._expression,
          "]",
        ),
        $.parameter_reference_word,
      ),
    // The address letter of a word whose value is an expression: the "X" of
    // "X{...}" and "X[...]". The opening delimiter is a separate, immediate
    // token so that it stays a bracket for both bracket matching and
    // highlighting — glued onto the letter it was neither. The letter also
    // stands alone as a program item, because the lexer commits to it before
    // it can see whether a delimiter follows, and a valueless word is legal
    // anyway ("G1 X", which Marlin reads as X0).
    address_letter: (_) => /[A-Za-z]/,
    // "X#[...]" keeps its "#" in the prefix: a lone letter would lose the
    // lexer race to a bare argument, which reads "X#" as two of its own
    // characters.
    parameter_word_start: (_) => /[A-Za-z]#/,
    parameter_reference_word: (_) => /[A-Za-z]#+(?:\d+|<[^>\r\n]+>)/,
    quoted_word: (_) =>
      choice(/[A-Za-z]"(?:[^"\\\r\n]|\\.)*"/, /[A-Za-z]'(?:[^'\\\r\n]|\\.)*'/),

    named_argument: ($) =>
      prec.right(
        seq(
          field("name", $.argument_name),
          optional(field("value", choice($._expression, $.bare_argument))),
        ),
      ),
    argument_name: (_) => /[A-Za-z_][A-Za-z0-9_]*=/,
    parameter_assignment: ($) =>
      prec(
        1,
        seq(
          field(
            "target",
            choice($.parameter_reference, $.indirect_parameter_reference),
          ),
          "=",
          field("value", $._expression),
        ),
      ),

    jinja_statement_inline: ($) =>
      seq(
        choice("{%", "{%-"),
        field("directive", $.jinja_directive),
        // prec(2) so "-%}" outranks the prec-1 "-" operator after an
        // expression — "defined -%}" must close the statement, not subtract.
        choice("%}", token(prec(2, "-%}"))),
      ),
    jinja_directive: ($) =>
      choice(
        seq(
          "set",
          commaSep1($._assignable),
          "=",
          repeat($._newline),
          commaSep1($._expression),
        ),
        seq(choice("if", "elif"), $._expression),
        "else",
        "endif",
        seq(
          "for",
          commaSep1($.identifier),
          "in",
          $._expression,
          optional(seq("if", $._expression)),
          optional("recursive"),
        ),
        "endfor",
        seq("macro", $.identifier, optional($.argument_list)),
        "endmacro",
        seq(
          choice(
            "filter",
            "with",
            "block",
            "extends",
            "include",
            "import",
            "from",
            "do",
          ),
          repeat($._template_item),
        ),
        "endfilter",
        "endwith",
        "endblock",
        "raw",
        "endraw",
        "break",
        "continue",
      ),
    jinja_comment_inline: (_) =>
      token(
        seq("{#", repeat(choice(/[^#\r\n]/, /#[^}\r\n]/)), optional("#"), "#}"),
      ),
    _template_item: ($) =>
      choice(
        $.brace_expression,
        $.jinja_statement_inline,
        $.jinja_comment_inline,
      ),

    _assignable: ($) =>
      choice($.identifier, $.parameter_reference, $.reference_expression),

    _expression: ($) =>
      choice(
        $.number,
        $.string,
        $.boolean,
        $.null,
        $.parameter_reference,
        $.indirect_parameter_reference,
        $.spaced_parameter_reference,
        $.system_variable,
        $.identifier,
        $.reference_expression,
        $.call_expression,
        $.brace_expression,
        $.bracket_expression,
        $.parenthesized_expression,
        $.tuple_expression,
        $.unary_expression,
        $.binary_expression,
        $.conditional_expression,
        $.filter_expression,
      ),

    // Trailing commas are load-bearing for RRF: "{pi,}" is a one-element
    // array while "{pi}" is a scalar.
    brace_expression: ($) =>
      delimitedList($, "{", "}", choice($._expression, $.dict_entry), {
        trailingComma: true,
      }),
    bracket_expression: ($) =>
      delimitedList($, "[", "]", $._expression, { trailingComma: true }),
    tuple_expression: ($) =>
      seq(
        "(",
        repeat($._newline),
        $._expression,
        ",",
        repeat($._newline),
        optional(
          seq(
            commaSepWithNewlines1($._expression, $),
            optional(","),
            repeat($._newline),
          ),
        ),
        ")",
      ),

    reference_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.string,
              $.parenthesized_expression,
              // Siemens indexes system variables directly: $P_UIFR[1,X,TR].
              $.system_variable,
            ),
          ),
          repeat1(choice($.member_access, $.subscript_access)),
        ),
      ),
    member_access: ($) => seq(".", field("property", $.identifier)),
    subscript_access: ($) =>
      seq(
        "[",
        optional(field("index", choice($._expression, $.slice_expression))),
        "]",
      ),
    call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("function", choice($.identifier, $.reference_expression)),
          field("arguments", $.argument_list),
          repeat(choice($.member_access, $.subscript_access, $.argument_list)),
        ),
      ),
    argument_list: ($) =>
      delimitedList(
        $,
        "(",
        ")",
        choice(
          $.multiline_string_expression,
          $._expression,
          $.keyword_argument,
        ),
        { trailingComma: true },
      ),
    keyword_argument: ($) =>
      prec(PREC.COMPARE + 2, seq($.identifier, "=", $._expression)),
    unary_expression: ($) =>
      prec(
        PREC.UNARY,
        seq(
          field("operator", choice("!", "-", "+", $.not_operator, "#")),
          field("operand", $._expression),
        ),
      ),

    conditional_expression: ($) =>
      prec.right(
        PREC.CONDITIONAL,
        choice(
          seq($._expression, "?", $._expression, ":", $._expression),
          // Jinja allows the else arm to be omitted, and real macros wrap the
          // line before "else". That wrap has to be a newline-prefixed token,
          // the same trick "\n and" and "\n or" use: LR must pick this
          // alternative's precedence before it sees the keyword, so it cannot
          // be a grammar-level repeat. "if" deliberately gets no such form —
          // a newline before "if" is indistinguishable from an RRF "if"
          // statement on the next line, and gluing those together is silent:
          // no ERROR, just a conditional where a control block belonged.
          seq(
            $._expression,
            "if",
            repeat($._newline),
            $._expression,
            optional(
              seq(
                choice("else", continuationWordOp("else")),
                repeat($._newline),
                $._expression,
              ),
            ),
          ),
        ),
      ),

    system_variable: (_) => token(prec(8, /\$[A-Za-z_][A-Za-z0-9_]*/)),
    colon: (_) => ":",
